--- a/tb/Makefile
+++ b/tb/Makefile
@@ -4,14 +4,14 @@
 SIM ?= icarus
 TOPLEVEL_LANG ?= verilog
 
-VERILOG_SOURCES += wrappers/my_design_wrapper.sv
+VERILOG_SOURCES += wrappers/spread_wrapper.sv
 # use VHDL_SOURCES for VHDL files
 
 # TOPLEVEL is the name of the toplevel module in your Verilog or VHDL file
-TOPLEVEL = my_design_wrapper
+TOPLEVEL = spread_wrapper
 
 # MODULE is the basename of the Python test file
-MODULE = test_my_design 
+MODULE = spread_tb
 
 # include cocotb's make rules to take care of the simulator setup
 include $(shell cocotb-config --makefiles)/Makefile.sim
